--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,21 @@
-body, html {
+    body, html {
     margin: 0;
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-ul { list-style: none; padding-left: 5px; }
-a { color:blue; text-decoration: none;}
-.bar {
+    }
+
+    ul { list-style: none; padding-left: 5px; }
+
+    a { color:blue; text-decoration: none;}
+
+    .bar {
     background-color: #f9f9fb;
     padding:15px;
     border-top: solid 1px #cdcdcd;
     border-bottom: solid 1px #cdcdcd;
-}
-.content {
+    }
+
+    .content {
     max-width: 1440px;
     margin: auto;
     grid-gap: 3rem;
@@ -21,18 +25,18 @@ a { color:blue; text-decoration: none;}
     grid-template-columns: minmax(0,15rem) minmax(0,2.5fr) minmax(0,15rem);
     padding-left: 1rem;
     padding-right: 1rem;
-}
-.footer {
+    }
+    footer {
     min-height: 100px;
     border-top: solid 1px #cdcdcd;
-}
-.anchors {
+    }
+    .anchors {
     border-left: solid 1px #cdcdcd;
     padding-left: 15px;
-}
-.sidebar {
+    }
+    .sidebar {
     border-right: solid 1px #cdcdcd;
-}
-figure {
+    }
+    /* figure {
     text-align: center;
-}
+    } */
